MDEV-30447: use of undeclared identifier O_DIRECT

In commit 24648768b443f6adeb8a0f4302958bfb300d536f, some use of
O_DIRECT was added without proper #ifdef guard. That broke the
compilation in environments that do not define O_DIRECT, such as
OpenBSD.